--- a/Versuch2Teil2/Versuch2Teil2.cbp
+++ b/Versuch2Teil2/Versuch2Teil2.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Versuch2" />
+		<Option title="Versuch2Teil2" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Versuch2" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Versuch2Teil2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Versuch2" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Versuch2Teil2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,12 +30,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Felder.cpp" />
-		<Unit filename="Strukturen.cpp" />
-		<Unit filename="Variablen.cpp" />
-		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
