--- a/Versuch2Teil1/Versuch2Teil1.cbp
+++ b/Versuch2Teil1/Versuch2Teil1.cbp
@@ -31,6 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Variablen.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
