--- a/Versuch2Teil3/Versuch2Teil3.cbp
+++ b/Versuch2Teil3/Versuch2Teil3.cbp
@@ -31,6 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Felder.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
